# gputest

./: .gitignore  CMakeLists.txt  compile.sh  rename_cpp.sh  rename_cu.sh
src/: main.cpp
src/cputest/: esercitazione6.cpp  esercitazione6.cu  framework.cu  mat_vec_prod.cu  sum_matrix.cu
src/esercitazione4/: esercitazione4.cu  esercitazione4_seq.c  esercitazione4_v2.cu  x
src/esercitazione5/: esercitazione5.cu  esercitazione5_benchmark.cu  esercitazione5_v2.cu  test.cu
src/esercitazione6/: esercitazione6_1.cu  esercitazione6_2.cu  esercitazione6_3.cpp  esercitazione6_3.cu
src/esercitazione7/: esercitazione7_1.cu  esercitazione7_2.cu
src/prima/: help.hipcc  provaMemCopy.cu  provaMemCopy_input.cu  somma.cu
