cmake_minimum_required(VERSION 3.23)
set(CMAKE_C_COMPILER "hipcc")
set(CMAKE_CXX_COMPILER "hipcc")
set(CMAKE_CXX_STANDARD 14)
set(CUDA_TOOLKIT_ROOT_DIR /home/dar9586/Programmazione/sdk/cuda-11.5)
set(CUDAToolkit_ROOT /home/dar9586/Programmazione/sdk/cuda-11.5)
set(ROCM_INSTALL_DIR /opt/rocm)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__HIP_PLATFORM_AMD__")
set(CMAKE_HIP_EXTENSIONS  cpp)
set(CMAKE_HIP_COMPILER  ${ROCM_INSTALL_DIR}/llvm/bin/clang++)
project(GPU CXX HIP)

list(APPEND CMAKE_PREFIX_PATH ${ROCM_INSTALL_DIR}/hip/lib/cmake/hip)
list(APPEND CMAKE_PREFIX_PATH ${ROCM_INSTALL_DIR}/lib/cmake/AMDDeviceLibs)
list(APPEND CMAKE_PREFIX_PATH ${ROCM_INSTALL_DIR}/lib/cmake/amd_comgr)
list(APPEND CMAKE_PREFIX_PATH ${ROCM_INSTALL_DIR}/lib/cmake/hsa-runtime64)
find_package(CUDA REQUIRED)
find_package(hip REQUIRED)
include_directories(SYSTEM ${CUDA_INCLUDE_DIRS} ${ROCM_INSTALL_DIR}/include)
add_executable(GPU src/main.cpp src/prima/provaMemCopy.cpp src/prima/provaMemCopy_input.cpp src/prima/somma.cpp src/esercitazione4/esercitazione4.cpp src/esercitazione5/esercitazione5.cpp src/esercitazione5/esercitazione5_benchmark.cpp src/cputest/framework.cpp src/cputest/esercitazione6.cpp src/esercitazione6/esercitazione6_1.cpp src/esercitazione6/esercitazione6_2.cpp src/esercitazione6/esercitazione6_3.cpp src/esercitazione4/esercitazione4_v2.cpp src/esercitazione5/esercitazione5_v2.cpp src/esercitazione5/test.cpp)
target_link_libraries(GPU hip)
